--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body{
+  background-color:
+}
+
 h1{
   text-align: center;
   font-size: 45px;
@@ -7,11 +11,7 @@ h1{
 button {
   width: 100px;
   height: 100px;
-  
   margin: 20px 20px 20px 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
 
 }
 
@@ -28,4 +28,11 @@ button {
   display: inline-block;
   margin: 20px 20px 20px 20px;
 
+}
+
+.deleteMe{
+  float: right;
+  width: 20px;
+  height: 20px;
+  text-align: center;
 }
