change button styling

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ button {
   width: 100px;
   height: 100px;
   margin: 20px 20px 20px 20px;
-
+  text-align: center;
+  font: 90px;
+  font-weight: bold;
 }
 
 #appendDiv {
@@ -35,4 +37,10 @@ button {
   width: 20px;
   height: 20px;
   text-align: center;
+}
+
+footer{
+  background-color: purple;
+  position: fixed;
+  width: 100%;
 }
